--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,103 @@
 *{
-    padding: 0;
-    margin: 0;
+    padding: 1 em;
+    margin: 1 em;
     box-sizing: border-box;
   }
+
+   body {
+    font-family: Arial, Helvetica, sans-serif;
+   }
+
+   h1 {
+    /* margin: 3.5rem; */
+    font-size: 1.5em;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+   }
+
+   h3 {
+    /* margin: 3.5rem; */
+    font-size: 2em;
+    font-family: Arial, Helvetica, sans-serif;
+
+    }
+
+   p {
+    /* margin: 3.5rem; */
+    font-size: 0.8em;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 12px;
+    }
+
+   div#player-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;   
+    }
+
+   .player-card {  
+    flex-direction: row;
+    /* justify-content: center; */
+    /* align-items: flex-end; */
+    width: 31%;
+    height: auto;
+    background-color:azure;
+    margin: .5em;
+    padding: 0.5em;
+    border: solid 1px coral;
+    border-radius: 5px;
+    }
+  
+  .player-card img {
+    .img-fluid. max-width: 100%;
+    height: auto;
+    padding:0;
+    margin:0;
+    }
+    
+  #new-player-form {
+    display: flex;
+    padding: 10px;
+    margin: 10px;
+    width: 100%;
+    height: auto;
+    border: solid 1px coral;
+    }
+
+  form#new-player-form {
+    /* padding: 1em;
+    margin: 1em; */
+    background-color: azure;
+    width: 100%;
+    height: 50px;
+    border: solid 1px coral;
+    float: left;
+  }
+/* input {
+  width: 100%;
+  height: 30px;
+  line-height: inherit;
+  margin: inherit;
+
+}
+label {
+  font-size: .75em;
+  display: inline-block;
+  float: left;
+} */
+
+label,input{
+  font-size: .75em;
+  height: 36px;
+
+}
+
+button.add-button {
+  font-size: 1em; 
+  background-color:aqua;
+  border: solid 1px; 
+  width: 100%;
+  margin-left: 10px;
+
+}
+
