--- a/styles.css
+++ b/styles.css
@@ -92,12 +92,12 @@ label,input{
 
 }
 
-button.add-button {
+/* button.add-button {
   font-size: 1em; 
   background-color:aqua;
   border: solid 1px; 
   width: 100%;
   margin-left: 10px;
 
-}
+} */
 
